[package]
name = "unfrs"
version = "0.1.1"
edition = "2018"
license = "GPL-2.0-or-later"
authors = [
    "Lissa Hyacinth <lissahyacinth@gmail.com>"
]
repository = "https://github.com/lissahyacinth/unfrs"
description = "Calculate the Unique Numeric Fingerprint for Tabular Data"

[lib]
name = "unf_rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "5.3", default-features = true }
unfhash = "0.1.0"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

